# Homework-19_2-Django

./: README.md  pyproject.toml
catalog/: models.py  urls.py  views.py
config/: settings.py
