[tool.poetry]
name = "alex-homework"
version = "1"
description = "19_2 hmwrk"
authors = ["alexeybedrinsky <bedrinsky@mail.ru>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
